--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     
     "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.0",
+    "typescript-eslint": "^8.39.0"
     
   }
 }
