--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@tailwindcss/vite": "^4.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.1.0",
@@ -39,7 +38,6 @@
     "react-webcam": "^7.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -49,12 +47,15 @@
     "@types/react-dom": "^19.1.7",
     "@types/react-webcam": "^1.1.0",
     "@vitejs/plugin-react": "^5.0.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "lightningcss": "^1.30.1",
+    "postcss": "^8.5.6",
     "rollup": "4.9.6",
+    "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
